--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=EMS
 
-# SQL Server DataSource Configuration
-spring.datasource.url=jdbc:sqlserver://ArunKumarK\\SQLEXPRESS:1433; encrypt=true; trustServerCertificate=true; databaseName=CIS
-spring.datasource.username=cis
-spring.datasource.password=Acs@12345
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/emsbgsit
+spring.datasource.username=root
+spring.datasource.password=root
 
-# JPA Configuration for Spring Boot 3.3.6
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
